# libpam-web3

./: .gitignore  CLAUDE.md  Cargo.toml  PROJECT.yaml  README.md
contracts/: CLAUDE.md  MINTING.md  PROJECT.yaml  foundry.toml  query-nft.sh
contracts/broadcast/Deploy.s.sol/11155111/: run-latest.json
contracts/script/: Deploy.s.sol
contracts/src/: AccessCredentialNFT.sol
contracts/test/: AccessCredentialNFT.t.sol
docs/: NFT_MODE_SETUP.md
docs/ldap/: example-entries.ldif  nft-schema.ldif
examples/: config-nft.toml  config-wallet.toml  config.conf  pam-sshd.conf  wallets
packaging/: build-deb-tools.sh  build-deb.sh
scripts/: extract-signing-page.ps1  extract-signing-page.sh
signing-page/: build.sh  generate.sh  index.html
src/: blockchain.rs  config.rs  ecies.rs  ldap.rs  lib.rs  otp.rs  passwd_lookup.rs  signature.rs  wallet_auth.rs
web3-auth-svc/: Cargo.toml  config.example.toml
web3-auth-svc/src/: main.rs
web3-auth-svc/src/backends/: etherscan.rs  jsonrpc.rs  mod.rs
web3-auth-svc/src/protocol/: mod.rs
