[package]
name = "web3-auth-svc"
version = "0.1.0"
edition = "2021"
description = "Local service for NFT-based authentication verification"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# HTTP client for RPC calls
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Crypto
hex = "0.4"
ecies = "0.2"
sha3 = "0.10"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
